[gd_scene load_steps=21 format=3 uid="uid://b4mrqfvtlycnc"]

[ext_resource type="Script" path="res://addons/brambox/UserInterface/user_interface.gd" id="1_k3peq"]
[ext_resource type="Shader" uid="uid://wn6mnfchf1w7" path="res://addons/brambox/UserInterface/ScreenSpaceBlur.tres" id="2_b1378"]
[ext_resource type="Theme" uid="uid://bq6qbvmwxf5gm" path="res://addons/brambox/UserInterface/UITheme.tres" id="3_qu8um"]
[ext_resource type="Script" path="res://addons/brambox/UserInterface/Achievement.gd" id="3_sx44b"]
[ext_resource type="PackedScene" uid="uid://dyr1juv2ogxdr" path="res://addons/brambox/UserInterface/subtitle_handler.tscn" id="3_tu702"]
[ext_resource type="FontFile" uid="uid://ij353qf6fdpf" path="res://addons/brambox/UserInterface/Font/Staatliches-Regular.ttf" id="4_03sln"]
[ext_resource type="PackedScene" uid="uid://sbl4rscivr8g" path="res://addons/brambox/UserInterface/settings_container.tscn" id="5_c6uib"]
[ext_resource type="Script" path="res://addons/brambox/UserInterface/Evaluation.gd" id="5_xpvdi"]

[sub_resource type="Animation" id="Animation_vggf5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_p1ngh"]
resource_name = "show"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 4.9),
"transitions": PackedFloat32Array(1, -0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pd2wl"]
_data = {
"RESET": SubResource("Animation_vggf5"),
"show": SubResource("Animation_p1ngh")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6vwxw"]
shader = ExtResource("2_b1378")
shader_parameter/BlurAmount = 1.0

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_dk3bb"]

[sub_resource type="Theme" id="Theme_4oy2w"]
default_font = ExtResource("4_03sln")
default_font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_saye0"]
font = ExtResource("4_03sln")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_425cw"]
font = ExtResource("4_03sln")
font_size = 48
font_color = Color(1, 0.164706, 0.105882, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6a4m3"]
font = ExtResource("4_03sln")
font_size = 48
font_color = Color(1, 0.164706, 0.105882, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pbfno"]
font = ExtResource("4_03sln")
font_size = 48
font_color = Color(1, 0.164706, 0.105882, 1)

[sub_resource type="InputEventAction" id="InputEventAction_gbevd"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_rg3uj"]
events = [SubResource("InputEventAction_gbevd")]

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_k3peq")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_qu8um")

[node name="Achievement" type="MarginContainer" parent="HUD"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24
script = ExtResource("3_sx44b")

[node name="Panel" type="Panel" parent="HUD/Achievement"]
custom_minimum_size = Vector2(400, 100)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="HUD/Achievement/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Extra Hand™ Unlocked!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Achievement"]
libraries = {
"": SubResource("AnimationLibrary_pd2wl")
}

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="HUD/CenterContainer"]
layout_mode = 2
mouse_filter = 2
stretch_mode = 5

[node name="SubtitleHandler" parent="HUD" instance=ExtResource("3_tu702")]
layout_mode = 1

[node name="BackgroundBlur" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_6vwxw")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_dk3bb")

[node name="Evaluation" type="CenterContainer" parent="." node_paths=PackedStringArray("bg") groups=["evaluation"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4oy2w")
script = ExtResource("5_xpvdi")
bg = NodePath("../BackgroundBlur")

[node name="PanelContainer" type="PanelContainer" parent="Evaluation"]
custom_minimum_size = Vector2(768, 512)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Evaluation/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Evaluation/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Performance Evaluation"
label_settings = SubResource("LabelSettings_saye0")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Evaluation/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MistakesLabel" type="Label" parent="Evaluation/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "You missed 3 books"
label_settings = SubResource("LabelSettings_425cw")
horizontal_alignment = 1

[node name="RemnantsLabel" type="Label" parent="Evaluation/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "You missed 3 books"
label_settings = SubResource("LabelSettings_6a4m3")
horizontal_alignment = 1

[node name="GenreLabel" type="Label" parent="Evaluation/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Score: "
label_settings = SubResource("LabelSettings_425cw")
horizontal_alignment = 1

[node name="SortLabel" type="Label" parent="Evaluation/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Score: "
label_settings = SubResource("LabelSettings_425cw")
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Evaluation/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Completed time: "
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="Evaluation/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Score: "
horizontal_alignment = 1

[node name="FlavourLabel" type="Label" parent="Evaluation/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "c-"
label_settings = SubResource("LabelSettings_pbfno")
horizontal_alignment = 1

[node name="ProceedButton" type="Button" parent="Evaluation/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Resume tasks"

[node name="Control" type="Node2D" parent="Evaluation"]
visible = false
position = Vector2(29, 18)

[node name="PanelContainer" type="PanelContainer" parent="Evaluation/Control"]
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_4oy2w")

[node name="Label" type="Label" parent="Evaluation/Control/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="RichTextLabel" type="RichTextLabel" parent="Evaluation/Control/PanelContainer"]
custom_minimum_size = Vector2(460, 400)
layout_mode = 2
bbcode_enabled = true
text = "Thankyou for playing ♥

The Book and co team
[url=https://linktr.ee/bramwellgames]Dev: Bramwell[/url]
[url=https://twitter.com/MaxTaubert7]Dev: Max[/url]
[url=https://www.linkedin.com/in/masha-michelle-taubert-650682139]Art+: Masha[/url]
[url=https://soundcloud.com/flangeworthy]music: Flangeworthy[/url]
"
fit_content = true

[node name="PauseScreen" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_qu8um")

[node name="BackgroundBlur" type="TextureRect" parent="PauseScreen"]
material = SubResource("ShaderMaterial_6vwxw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_dk3bb")

[node name="PauseContainer" type="CenterContainer" parent="PauseScreen"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/PauseContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Pause"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
layout_mode = 2
shortcut_context = NodePath("../..")
shortcut = SubResource("Shortcut_rg3uj")
shortcut_in_tooltip = false
text = "resume"

[node name="SettingsButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="PauseScreen/PauseContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="SettingsContainer" parent="PauseScreen" instance=ExtResource("5_c6uib")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="meta_clicked" from="Evaluation/Control/PanelContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseScreen/PauseContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="exit" from="PauseScreen/SettingsContainer" to="." method="_on_settings_container_exit"]
